@@ -1,5 +1,10 @@
 2007-10-10  Al Riddoch  <alriddoch@zepler.org>
 
+	* test/Avatar_unittest.cpp: Cover the rest of Avatar. Coverage is now
+	  pretty much complete.
+
+2007-10-10  Al Riddoch  <alriddoch@zepler.org>
+
 	* Eris/Avatar.cpp: Toughen up operation checking in logoutResponse().
 
 2007-10-09  Al Riddoch  <alriddoch@zepler.org>
